# uv-ship

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG  README.md  auxFns.py  index.html  mkdocs.yml  pyproject.toml  ruff.toml  sitemap.xml
.github/workflows/: deploy-mkdocs.yml  publish.yml
changelog/: index.html
config/: index.html
docs/: changelog.md  config.md  features.md  index.md  installation.md  troubleshooting.md  workflow.md
docs/stylesheets/: extra.css
features/: index.html
installation/: index.html
search/: search_index.json
src/pybump/: auxFns.py  cli.py  config.py  git.py  main.py
src/pybump/resources/: __init__.py  symbols.json
src/uv_ship/: bump.py  changelogger.py  cli.py  cmd_log.py  cmd_next.py  cmd_tag.py  commands.py  config.py  git.py  main.py  messages.py  preflight.py  this.py  workflows.py
src/uv_ship/commands/: general.py
src/uv_ship/config/: config_loader.py  default_config.toml
src/uv_ship/resources/: __init__.py  ansi.json  messages.py  symbols.json  tagline.md
stylesheets/: navbar.css
tests/: test_changelogger.py  test_config.toml  test_preflight.py
workflow/: index.html
