[project]
name = "pybump"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "pre-commit>=4.3.0",
    "ruff == 0.13.1",
]

[project.scripts]
uv_bump = "pybump.auxFns:main"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
