[project]
name = "pybump"
version = "1.8.23"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["tomli>=2.2.1"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "pre-commit>=4.3.0",
    "ruff == 0.13.1",
]

[project.scripts]
uv_bump = "pybump.cli:pybump_cli"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv-bump]
release_branch = "master"
tag_prefix = "v"
