[project]
name = "pybump"
version = "1.8.30"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.6",
    "pre-commit>=4.3.0",
    "ruff == 0.13.1",
]

[project.scripts]
uv-bump = "pybump.cli:pybump_cli"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv-bump]
release_branch = "master"
tag_prefix = "v"
